# opengl-primary

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
include/glad/: glad.c  glad.h
src/: BaseDefine.h  Utility.cpp  Utility.h  main.cpp
src/base/: Buffer.h  Camera.cpp  Camera.h  Engine.cpp  Engine.h  FrameBuffer.h  FrameBufferTexture.cpp  FrameBufferTexture.h  IMaterial.cpp  IMaterial.h  IRenderer.cpp  IRenderer.h  IScene.cpp  IScene.h  ITexture.cpp  ITexture.h  ImageTexture.cpp  ImageTexture.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.h  RenderBuffer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/core/: Application.cpp  Application.h  Common.cpp  Common.h  GLContext.cpp  GLContext.h  IContext.h  IPanel.cpp  IPanel.h  IPrimitive.cpp  IPrimitive.h  IRenderer.cpp  IRenderer.h  IScene.cpp  IScene.h  InspectPanel.cpp  InspectPanel.h  PropertyPanel.cpp  PropertyPanel.h  SceneFactory.h  UIContext.cpp  UIContext.h
src/examples/blend/: Blend.cpp  Blend.h  CMakeLists.txt  StencilTest.cpp  StencilTest.h  main.cpp
src/examples/cube/: CMakeLists.txt  main.cpp
src/examples/frame_buffer/: CMakeLists.txt  FrameBufferDemo.cpp  FrameBufferDemo.h  main.cpp
src/examples/model_load/: CMakeLists.txt  ModelLoad.cpp  ModelLoad.h  main.cpp
src/examples/stencil_test/: CMakeLists.txt  StencilTest.cpp
src/examples/triangle/: CMakeLists.txt  main.cpp
src/glsl/cube/: fragment.glsl  vertex.glsl
src/glsl/frame_buffer/: fragment.glsl
src/glsl/hdr/: fragment.glsl
src/glsl/model_load/: fragment.glsl
src/glsl/point_shadow/: geometry.glsl
src/glsl/shadow/: vertex.glsl
src/glsl/skybox/: fragment.glsl  vertex.glsl
src/glsl/triangle/: vertex.glsl
src/material/: CommonMaterial.cpp  CommonMaterial.h  PhongMaterial.cpp  PhongMaterial.h  ReflectMaterial.cpp  ReflectMaterial.h  SkyboxMaterial.cpp  SkyboxMaterial.h
src/primitive/: Cube.cpp  Cube.h  Floor.cpp  Floor.h  IPrimitive.cpp  IPrimitive.h  Model.cpp  Model.h  Quadrangle.cpp  Quadrangle.h  Skybox.cpp  Skybox.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
src/scene/: Blend.cpp  Blend.h  PhongLight.cpp  PhongLight.h  SkyboxDemo.cpp  SkyboxDemo.h
